[gd_scene load_steps=7 format=3 uid="uid://3nmw3rp27fqm"]

[ext_resource type="Texture2D" uid="uid://de1fbv5n6pp0u" path="res://assets/PNG/Tiles/Tilemap/tilemap_packed.png" id="1_lk043"]
[ext_resource type="Script" uid="uid://d0qij7xd8fhyf" path="res://Scenes/exit.gd" id="2_emg71"]
[ext_resource type="Script" uid="uid://gxl8ki5l82b7" path="res://Tableau/timer.gd" id="3_emg71"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eqlai"]
texture = ExtResource("1_lk043")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:2/0 = 0
4:2/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
10:7/0 = 0
11:7/0 = 0
11:8/0 = 0
12:8/0 = 0
13:9/0 = 0
14:10/0 = 0
15:10/0 = 0
15:11/0 = 0
16:11/0 = 0
16:12/0 = 0
17:12/0 = 0
15:12/0 = 0
12:12/0 = 0
11:12/0 = 0
10:11/0 = 0
7:11/0 = 0
6:11/0 = 0
5:11/0 = 0
4:11/0 = 0
3:11/0 = 0
2:11/0 = 0
2:12/0 = 0
1:12/0 = 0
1:11/0 = 0
1:10/0 = 0
1:9/0 = 0
1:8/0 = 0
2:7/0 = 0
2:6/0 = 0
1:6/0 = 0
1:5/0 = 0
1:4/0 = 0
1:3/0 = 0
1:2/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:8/0 = 0
2:9/0 = 0
2:10/0 = 0
1:7/0 = 0
0:7/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:12/0 = 0
0:11/0 = 0
0:10/0 = 0
0:9/0 = 0
0:8/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:11/0 = 0
12:11/0 = 0
13:10/0 = 0
12:10/0 = 0
11:10/0 = 0
10:10/0 = 0
7:10/0 = 0
6:10/0 = 0
5:10/0 = 0
4:10/0 = 0
3:9/0 = 0
4:9/0 = 0
16:10/0 = 0
17:11/0 = 0
6:9/0 = 0
5:9/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
10:8/0 = 0
7:8/0 = 0
3:7/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
12:6/0 = 0
7:6/0 = 0
6:6/0 = 0
5:5/0 = 0
4:5/0 = 0
3:5/0 = 0
6:5/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
14:5/0 = 0
13:5/0 = 0
12:5/0 = 0
5:4/0 = 0
4:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:4/0 = 0
16:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:3/0 = 0
9:3/0 = 0
7:3/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:3/0 = 0
17:3/0 = 0
17:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
13:2/0 = 0
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
8:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
3:0/0 = 0
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:1/0 = 0
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
9:0/0 = 0
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
13:0/0 = 0
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:0/0 = 0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:2/0 = 0
16:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:5/0 = 0
16:8/0 = 0
15:8/0 = 0
15:5/0 = 0
17:8/0 = 0
17:10/0 = 0
14:8/0 = 0
13:8/0 = 0
17:5/0 = 0
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
3:10/0 = 0
11:3/0 = 0
12:3/size_in_atlas = Vector2i(2, 2)
12:3/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
11:6/0 = 0
3:3/size_in_atlas = Vector2i(1, 2)
3:3/0 = 0
8:3/size_in_atlas = Vector2i(1, 2)
8:3/0 = 0
13:11/size_in_atlas = Vector2i(2, 2)
13:11/0 = 0
4:7/0 = 0
5:7/0 = 0
14:3/size_in_atlas = Vector2i(1, 2)
14:3/0 = 0
8:10/0 = 0
9:10/0 = 0
9:11/0 = 0
8:11/0 = 0
8:8/0 = 0
9:9/0 = 0
9:8/0 = 0
8:9/0 = 0

[sub_resource type="TileSet" id="TileSet_1en0e"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_eqlai")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdpqw"]
radius = 14.0
height = 38.0

[node name="TabBase" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_1en0e")
format = 2
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array(327668, 0, 0, 327669, 65536, 0, 327670, 65536, 0, 327671, 65536, 0, 327672, 131072, 0, 458741, 65536, 2, 458742, 65536, 2, 458743, 65536, 2, 458744, 65536, 2, 458745, 65536, 2, 393210, 720896, 4, 458746, 65536, 2, 458747, 65536, 2, 458748, 65536, 2, 458749, 65536, 2, 458750, 65536, 2, 458751, 65536, 2, 393216, 65536, 2, 393217, 65536, 2, 458740, 0, 2, 393204, 0, 1, 393205, 65536, 1, 393206, 65536, 1, 393207, 65536, 1, 393208, 131072, 1, 393209, 720896, 4, 393211, 720896, 4, 327681, 720896, 4, -196604, 65536, 0, -131068, 65536, 1, -65532, 65536, 1, 4, 65536, 1, 65540, 65536, 1, 131076, 65536, 1, 196612, 65536, 1, 262148, 65536, 1, -196603, 131072, 0, -131067, 131072, 1, -65531, 131072, 1, 5, 131072, 1, 65541, 131072, 1, 131077, 65536, 1, 196613, 65536, 1, 262149, 65536, 1, 131078, 65536, 1, 196614, 65536, 1, 262150, 65536, 1, 131079, 65536, 1, 196615, 65536, 1, 262151, 65536, 1, 262152, 65536, 1, -196605, 0, 0, -131069, 0, 1, -65533, 0, 1, 3, 0, 1, 65539, 0, 1, 131075, 0, 1, 196611, 0, 1, 262147, 0, 1, 327682, 720896, 4, 393218, 65536, 2, 327683, 0, 1, 393219, 65536, 2, 327684, 65536, 1, 393220, 65536, 2, 393221, 65536, 2, 327686, 65536, 1, 393222, 65536, 2, 327687, 65536, 1, 393223, 65536, 2, 327688, 65536, 1, 393224, 65536, 2, 327689, 65536, 1, 393225, 65536, 2, 393226, 65536, 2, 393227, 131072, 2, 262153, 65536, 1, 393212, 0, 1, 131069, 65536, 0, 196605, 65536, 1, 262141, 65536, 1, 327677, 65536, 1, 393213, 65536, 1, 131070, 65536, 0, 196606, 65536, 1, 262142, 65536, 1, 327678, 65536, 1, 393214, 65536, 1, 131071, 131072, 0, 196607, 131072, 1, 262143, 131072, 1, 327679, 131072, 1, 393215, 131072, 1, 131068, 0, 0, 196604, 0, 1, 262140, 0, 1, 327676, 0, 1, 327680, 720896, 4, 65542, 720896, 4, 65543, 720896, 4, 196616, 720896, 4, 196617, 720896, 4, 327690, 720896, 4, 327691, 720896, 4, -196599, 655360, 0, -196598, 720896, 0, -196597, 786432, 0, -131062, 720896, 1, -65526, 720896, 2, -131063, 655360, 1, -65527, 655360, 2, -131061, 786432, 1, -65525, 786432, 2, -327670, 524288, 10, -327669, 589824, 10, -262134, 524288, 11, -262133, 589824, 11, 327685, 65536, 1, 196596, 524288, 8, 196597, 589824, 8, 262132, 524288, 9, 262133, 589824, 9, 458739, 983040, 3, 393203, 983040, 3, 327667, 983040, 3, 262131, 983040, 3, 196595, 983040, 3, 131059, 983040, 3, 65523, 983040, 3, -13, 983040, 3, -65549, 983040, 3, -131085, 983040, 3, -196621, 983040, 3, -262157, 983040, 3, -327693, 983040, 3, -393229, 983040, 3, -458765, 983040, 2, -458764, 1048576, 2, -458763, 1048576, 2, -458762, 1048576, 2, -458761, 1048576, 2, -458760, 1048576, 2, -458759, 1048576, 2, -458758, 1048576, 2, -458757, 1048576, 2, -458756, 1048576, 2, -458755, 1048576, 2, -458754, 1048576, 2, -458753, 1048576, 2, -524288, 1048576, 2, -524287, 1048576, 2, -524286, 1048576, 2, -524285, 1048576, 2, -524284, 1048576, 2, -524283, 1048576, 2, -524282, 1048576, 2, -524281, 1048576, 2, -524280, 1048576, 2, -524279, 1048576, 2, -524278, 1048576, 2, -524277, 1048576, 2, -524276, 1114112, 2, -458740, 1114112, 3, -393204, 1114112, 3, -327668, 1114112, 3, -262132, 1114112, 3, -196596, 1114112, 3, -131060, 1114112, 3, -65524, 1114112, 3, 12, 1114112, 3, 65548, 1114112, 3, 131084, 1114112, 3, 196620, 1114112, 3, 262156, 1114112, 3, 327692, 1114112, 3, 393228, 1114112, 3)

[node name="SpawnPlayer" type="Marker2D" parent="."]
position = Vector2(-176, 56)

[node name="exit" type="Area2D" parent="."]
position = Vector2(175, -57)
script = ExtResource("2_emg71")

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
position = Vector2(1, -5)
shape = SubResource("CapsuleShape2D_xdpqw")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
one_shot = true
autostart = true
script = ExtResource("3_emg71")

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = -43.0
offset_top = -106.0
offset_right = 8.0
offset_bottom = -83.0
theme_override_font_sizes/font_size = 23
text = "10.00"

[connection signal="body_entered" from="exit" to="exit" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="exit" method="_on_timer_timeout"]
